# soft_keyence_server_console_app

./: .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
includes/: keyenceServer.h
pkg/: mockKeyence.py
src/: main.cpp
tests/: mockClient.py
